resources/sass/_general.scss
html {
  font-size: 18px;

  @include media-breakpoint-down(md){
    font-size: 16px;
  }

  @include media-breakpoint-down(sm){
    font-size: 15px;
  }

  @include media-breakpoint-down(xs){
    font-size: 14px;
  }
}

body {
  background: _palette(main-blue);
  margin: 0;
  min-width: 320px;
}

body:after {
  content: "";
  background: url(#{$image-path}bg.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  opacity: 0.35;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: fixed;
  z-index: -1;
}

body, input, select, textarea {
  font-family: _font(family);
  font-weight: _font(weight);
  font-size: 1rem;
  line-height: 1.2;
}

// wrapper
#wrapper {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto;
  justify-items: center;
  grid-template-areas: "navigation"
  "intro"
  "proficiency"
  "job"
  "education"
  "languages"
  "hobby"
  "contact"
  "footer";

  .container {
    margin: 0 auto;
    max-width: 1300px;
  }

  .item {
    width: 100%;
    padding: 5rem 1rem;
    @include box-sizing(border-box);
    overflow: hidden;
  }

  @include media-breakpoint-down(sm) {
    grid-template-areas:
    "intro"
    "proficiency"
    "job"
    "education"
    "languages"
    "hobby"
    "contact"
    "footer";
  }
}

#footer {
  background: $white;
  grid-area: footer;
  text-align: center;
  padding: 1rem 0;
  width: 100%;
}

a{
  text-decoration: none;

  &:hover{
    text-decoration: underline;
  }
}

/* headings */
h1,
h2,
h3,
h4,
h5,
h6{
  font-family: _font(family);
  font-weight: _font(weight);
  color: inherit;
  line-height: 1.1;
  display:block;
  font-style: normal;
  margin: 0;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 1.75rem;
  line-height: 1.3;
}

h3 {
  font-size: 1.25rem;
}

h4 {
  font-size: 1rem;
}

h5 {
  font-size: 0.9rem;
}

h6 {
  font-size: 0.8rem;
}

.heading {
  text-transform: uppercase;
  letter-spacing: 1.1px;
  text-align: center;
  margin: 0 auto 3rem;
}

p {
  margin: 0 0 1rem;
}

/* List */
ul {
	list-style: none;
	margin: 0;
	padding: 0;

	&.icons {
		cursor: default;
		list-style: none;
		padding-left: 0;

		li {
			display: inline-block;
			padding: 0 0.5rem 0 0;
			vertical-align: middle;

			&:last-child {
				padding-right: 0;
			}

			.icon {
				&:before {
					width: 2.25rem;
					height: 2.25rem;
					line-height: 2.25rem;
					display: inline-block;
					text-align: center;
					border-radius: 100%;
					font-size: 1.25rem;
				}
			}
		}
	}
}

dl{
  @include clearfix();
  margin-bottom: 5px;

  dt{
    float: left;
    font-weight: normal;
    clear: left;
    margin:0 5px 7px 0;
  }

  dd{
    float: left;
    margin-bottom: 7px;
    @include media-breakpoint-down(xs){
      width: 100%;
    }
  }
}

